API operation to assign and deassign rule groups from a character (#102)
